# multi-agent-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: critic_agent.py  research_agent.py  writer_agent.py
app/api/: research.py
app/core/: config.py  logging.py
app/graph/: state.py  workflow.py
app/llms/: factory.py
app/prompts/: critic.py  research.py  writer.py
app/services/: research_service.py
app/tools/: search_formatter.py  tavily_search.py
static/: app.js  style.css
templates/: index.html
tests/: test_graph.py  test_llm.py  test_tavily.py
