[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Production-grade Multi-Agent Research Assistant built with FastAPI and LangGraph."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "langchain-google-genai>=2.1.9",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "tavily-python>=0.7.11",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"