[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Production-grade Multi-Agent Research Assistant built with FastAPI and LangGraph."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    "langchain>=0.3.27",
    "langgraph>=0.6.4",

    "langchain-openai>=1.3.5",
    "langchain-google-genai>=2.1.9",

    "google-generativeai>=0.8.5",

    "tavily-python>=0.7.11",

    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",

    "jinja2>=3.1.6",

    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]